<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.activity.ProfilMedecinActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="417dp"
        android:layout_height="149dp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/doctorPhoto"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="84dp"
        app:civ_border_color="@color/dark_primary"
        app:civ_border_width="0.9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></de.hdodenhof.circleimageview.CircleImageView>
    <LinearLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:weightSum="100"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/textViewNom2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="50"
            android:text="nom"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPrenom2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="prenom"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="248dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/myrect"
        android:elevation="2dp"
        android:textAlignment="center"
        android:weightSum="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        tools:targetApi="lollipop">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="50"
            android:gravity="end"
            android:text="@string/specialite"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSpecialite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="50"
            android:gravity="start"
            app:layout_constraintHorizontal_weight="50"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="248dp"
        android:layout_height="57dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/myrect"
        android:elevation="2dp"
        android:weightSum="100"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="50"
            android:gravity="end"
            android:text="@string/numero"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:layout_weight="50"
            android:gravity="start" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="248dp"
        android:layout_height="57dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/myrect"
        android:weightSum="100"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:layout_weight="50"
            android:text="@string/experience"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewExp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_weight="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/conseil"
        android:layout_width="246dp"
        android:layout_height="54dp"
        android:layout_marginTop="44dp"
        android:text="@string/demandeConseil"
        app:backgroundTint="@color/primary"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout5"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rendezVous"
        android:layout_width="246dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:text="@string/rendez_vous"
        app:backgroundTint="@color/primary"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="@+id/conseil"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/conseil"
        app:layout_constraintTop_toBottomOf="@+id/conseil" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calendar"
        android:layout_width="246dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:text="@string/calendar"
        app:backgroundTint="@color/primary"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="@+id/rendezVous"
        app:layout_constraintStart_toStartOf="@+id/rendezVous"
        app:layout_constraintTop_toBottomOf="@+id/rendezVous" />


</androidx.constraintlayout.widget.ConstraintLayout>



